[tool.poetry]
name = "hw-asyncio"
version = "0.1.0"
description = ""
authors = ["Vladislav B <rolmf85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofile = "^3.8.8"
aiopath = "0.6.11"
aiohttp = "^3.8.6"
websockets = "^11.0.3"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
